@@ -53,11 +53,11 @@ fit2 <- blackboost(Surv(futime,fustat) ~ age + resid.ds + rx + ecog.ps,
     data = ovarian, family = CoxPH(), control = boost_control(mstop = 1000))
 
 A2 <- survFit(fit2)
-A2
+print(A2)
 
 newdata <- ovarian[c(1,3,12),]
 A2 <- survFit(fit2, newdata = newdata)
-A2
+print(A2)
 
 ### predictions:
 set.seed(1907)
