@@ -534,7 +534,24 @@ Number of baselearners:  2
 > 
 > ### check if bmrf works correctly
 > ## (if not all locations are observed)
-> require("BayesX")
+> if (require("BayesX")) {
++     germany <- read.bnd(system.file("examples/germany.bnd", package="BayesX"))
++     districts <- attr(germany, "regions")
++     set.seed(1907)
++     regions <- sample(districts, 400, replace = TRUE)
++     B <- bmrf(regions, bnd = germany)
++     X <- extract(B)
++     K <- extract(B, what = "pen")
++     Xs <- colSums(as.matrix(X))
++     names(Xs) <- rownames(K)
++     stopifnot(all(Xs[Xs > 0] == table(regions)[names(Xs[Xs > 0])]))
++ 
++     ## check against old, slower code:
++     Xold <- matrix(0, nrow = length(regions), ncol = ncol(K))
++     for (i in 1:length(regions))
++         Xold[i, which(districts == regions[i])] <- 1
++     stopifnot(all(X == Xold))
++ }
 Loading required package: BayesX
 Loading required package: akima
 Loading required package: shapefiles
@@ -546,31 +563,14 @@ The following object(s) are masked from 'package:foreign':
 
     read.dbf, write.dbf
 
-> germany <- read.bnd(system.file("examples/germany.bnd", package="BayesX"))
 Read 8852 records
 Note: map consists of 310 polygons
 Note: map consists of 309 regions
 Reading map ... finished
-> districts <- attr(germany, "regions")
-> set.seed(1907)
-> regions <- sample(districts, 400, replace = TRUE)
-> B <- bmrf(regions, bnd = germany)
 Start neighbor search ...
 progress: 50%
 progress: 100%
 Neighbor search finished.
-> X <- extract(B)
-> K <- extract(B, what = "pen")
-> Xs <- colSums(as.matrix(X))
-> names(Xs) <- rownames(K)
-> stopifnot(all(Xs[Xs > 0] == table(regions)[names(Xs[Xs > 0])]))
-> 
-> ## check against old, slower code:
-> Xold <- matrix(0, nrow = length(regions), ncol = ncol(K))
-> for (i in 1:length(regions))
-+     Xold[i, which(districts == regions[i])] <- 1
-> stopifnot(all(X == Xold))
-> 
 > 
 > ## check handling of missing values
 > y <- yNa <- rnorm(100)
@@ -665,4 +665,4 @@ missing values are excluded per base-learner, i.e., base-learners may depend on 
 > 
 > proc.time()
    user  system elapsed 
- 33.562   0.120  33.939 
+ 30.233   0.132  30.671 
